bin/testsuite/tests/compiler/src/errors/compiler5352.swg
#global testerror "Err0533"
func contains(what: u8) => return Ut8.contains(toSlice(), what)